ajust icons and align

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title >Lista de Tarefas</title>
 </head>
 <body>
-    <h1>Lista de Tarefas</h1>
-    <header>
-        <input id="inputTask" type="text" placeholder="Digite sua tarefa">
-        <button id="add-btn" class="add">Adicionar</button>
-    </header>
-    <main id="listArea">
-        
-    </main>
+    <div class="container">
+        <h1>Lista de Tarefas</h1>
+        <header>
+            <input id="inputTask" type="text" placeholder="Digite sua tarefa">
+            <button id="add-btn" class="add">Adicionar</button>
+        </header>
+        <main id="listArea">
+            
+        </main>
+    </div>
     <script src="JS/control.js"></script>
 </body>
 </html>
